add create gallery method
